# jax-tutorial

./: .gitignore  README.md  pyproject.toml
ddpm/: __init__.py  diffusion.py  sample.py  train.py
mnist_mlp/: __init__.py  train.py
src/dataset/: __init__.py  cifar10.py  mnist.py
src/model/: __init__.py  unet.py
